sofia-rs/tui/src/chatwidget/snapshots/sofia_tui__chatwidget__tests__guardian_write_stdin_denied_history.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: lines_to_single_string(denial)
---
✗ Request denied for sofia to send input to terminal 42: "confirm\n"
